--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -7,244 +7,15 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <!--Segment-->
-  <ion-segment [(ngModel)]="selectTabs">
-    <ion-segment-button value="Daily">
-      <ion-label>Daily</ion-label>
-    </ion-segment-button>
 
-    <ion-segment-button value="Monthly">
-      <ion-label>Monthly</ion-label>
-    </ion-segment-button>
-  </ion-segment>
-
-  <h3 class="ion-text-center">Month</h3>
-
-  <div class="Daily" *ngIf="selectTabs =='Daily'">
-  <!--Week buttons-->
-  <div id="weekButtons">
-    <ion-grid>
-      <ion-row>
-        <ion-col size="1.7" *ngFor="let number of [1,2,3,4,5,6,7]" >
-        <!--Sunday-->
-        <ion-card>
-          <ion-card-content>
-            <ion-card-title>S</ion-card-title>
-            <ion-card-subtitle>{{number}}</ion-card-subtitle>
-          </ion-card-content>
-        </ion-card> 
-      </ion-col>    
-      
-    </ion-row>
-
-    </ion-grid>
-  </div>
-
-  <!--categories-->
-  <div id="categories">
-    <ion-card>
-      <ion-card-content>
-        <ion-slides pager="true" [options]="slideOpts">
-          <!--Today-->
-          <ion-slide>
-              <ion-card id="today">
-                <ion-card-header>
-                  <ion-icon name="Today"></ion-icon>
-                </ion-card-header>
-      
-                <ion-card-content>
-                  <ion-card-title>Today</ion-card-title>
-                  <ion-card-subtitle>5/10 completed</ion-card-subtitle>
-                </ion-card-content>
-              </ion-card>               
-            </ion-slide>
-  
-            <!--categories-->
-          <ion-slide *ngFor="let category of categories; let i = index">      
-  
-            <ion-segment [(ngModel)]="selectCategory">
-              <ion-segment-button (click)="chooseCategory(i); getTasks(i)">
-                <ion-card id="home">
-                  <ion-card-header>
-                    <ion-icon name="{{category.icon}}"></ion-icon>
-                  </ion-card-header>
-  
-                  <ion-card-content>
-                    <ion-card-title>{{category.name}}</ion-card-title>
-                    <ion-card-subtitle>5/10 completed</ion-card-subtitle>
-                  </ion-card-content>
-                </ion-card>            
-            </ion-segment-button>
-          </ion-segment>
-  
-        </ion-slide>      
-  
-        </ion-slides>
-  
-      </ion-card-content>
-    </ion-card>
-  </div>
-
-    <!--Tasks-->
-    <div  id="taskList">
-      <ion-card>
-        <ion-card-content>
-          <ion-list>
-            <ion-item-sliding *ngFor="let currentTask of currentTasks">         
-              <ion-item>
-                <ion-checkbox [(ngModel)]="currentTask.complete" (ionChange)="updateCheckbox(currentTask)"></ion-checkbox>
-                <ion-label>{{currentTask.name}}</ion-label>
-                <h4>{{currentTask.endDate | date:'dd MMM YYYY, HH:mm' }}</h4>
-              </ion-item>
-          
-              <ion-item-options side="end">
-                <ion-item-option (click)="unread(item)">Delete</ion-item-option>
-              </ion-item-options>
-            </ion-item-sliding>
-          </ion-list>
-  
-        </ion-card-content>
-      </ion-card>
-    </div>
-
-  <!--Gamification-->
-  <div id="gamificationBox"> 
-    <ion-card>
-      <ion-card-content>
-        <ion-grid>
-          <ion-row>
-            <ion-col>
-              <ion-row>
-                <ion-col>
-                  <h5>Streak</h5>
-                  <h2>10 Days</h2>
-                </ion-col>
-              </ion-row>
-    
-              <ion-row>
-                <ion-col>
-                  <h5>Tasks Done</h5>
-                  <h2>2 Tasks</h2>
-                </ion-col>
-              </ion-row>
-            </ion-col>
-
-            <ion-col>
-              circle
-            </ion-col>
-          </ion-row>
-
-          <ion-row>
-            <ion-col>
-              <h5>Day</h5>
-              <ion-progress-bar value="0.5"></ion-progress-bar>
-              <h5>Day</h5>
-            </ion-col>
-
-            <ion-col>
-              <h5>Day</h5>
-              <ion-progress-bar value="0.5"></ion-progress-bar>
-              <h5>Day</h5>
-            </ion-col>
-
-            <ion-col>
-              <h5>Day</h5>
-              <ion-progress-bar value="0.5"></ion-progress-bar>
-              <h5>Day</h5>
-            </ion-col>
-
-          </ion-row>
-          
-        </ion-grid>  
-      
-      </ion-card-content>
-    </ion-card>
-
-    <div id=""></div>
-  </div>
-
-</div>
-
-<div  class="monthly" *ngIf="selectTabs =='Monthly'">
-  <!--month buttons-->
-  <div id="monthButtons">
-    <ion-grid>
-      <ion-row>
-        <ion-col size="1.7">
-        <!--Sunday-->
-        <ion-card>
-          <ion-card-content>
-            <ion-card-title>S</ion-card-title>
-          </ion-card-content>
-        </ion-card> 
-      </ion-col>
-
-      <ion-col size="1.7">
-        <!--monday-->
-        <ion-card>
-          <ion-card-content>
-            <ion-card-title>S</ion-card-title>
-          </ion-card-content>
-        </ion-card> 
-      </ion-col>
-
-      <ion-col size="1.7">
-        <!--tuesday-->
-        <ion-card>
-          <ion-card-content>
-            <ion-card-title>S</ion-card-title>
-          </ion-card-content>
-        </ion-card> 
-      </ion-col>
-
-      <ion-col size="1.7">
-        <!--wednesday-->
-        <ion-card>
-          <ion-card-content>
-            <ion-card-title>S</ion-card-title>
-          </ion-card-content>
-        </ion-card> 
-      </ion-col>
-
-      <ion-col size="1.7">
-        <!--thursday-->
-        <ion-card>
-          <ion-card-content>
-            <ion-card-title>S</ion-card-title>
-          </ion-card-content>
-        </ion-card> 
-      </ion-col>
-
-      <ion-col size="1.7">
-        <!--friday-->
-        <ion-card>
-          <ion-card-content>
-            <ion-card-title>S</ion-card-title>
-          </ion-card-content>
-        </ion-card> 
-      </ion-col>
-
-      <ion-col size="1.7">
-        <!--Saturday-->
-        <ion-card>
-          <ion-card-content>
-            <ion-card-title>S</ion-card-title>
-          </ion-card-content>
-        </ion-card> 
-      </ion-col>
-      
-    </ion-row>
-
-    </ion-grid>
-  </div>
-
+<div >
   <!--caldenar API-->
   <div class="calendar">
-      <ion-calendar [(ngModel)]="date"
-        (click)="onChange($event)"
-        [type]="type"
-        [format]="'YYYY-MM-DD'">
-    </ion-calendar>
+    <ion-calendar [(ngModel)]="date"
+    (change)="onChange($event)"
+    [type]="type"
+    [format]="'YYYY-MM-DD'">
+  </ion-calendar>
   </div>
 
   <!--categories-->
