--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -15,8 +15,8 @@
   </ion-item>
 
   <ion-item>
-    <ion-label position="floating">Password</ion-label>
-    <ion-input clearInput></ion-input>
+    <ion-label  position="floating">Password</ion-label>
+    <ion-input type="password" clearInput></ion-input>
   </ion-item>
   <ion-button id="forgotPass" fill="clear">forgot password</ion-button>
 
