--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,12 +1,8 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Calendar
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
 
 <ion-content [fullscreen]="true">
+  <ion-title>
+    Calendar
+  </ion-title>
 
 <div >
   <!--caldenar API-->
@@ -18,37 +14,47 @@
   </ion-calendar>
   </div>
 
-  <!--categories-->
-  <div id="categories">
-    <ion-card>
-      <ion-card-content>
-        <ion-slides pager="true" [options]="slideOpts">
-            <!--categories-->
-          <ion-slide *ngFor="let category of categories; let i = index">      
-            <ion-card (click)="chooseCategory(i); getTasks(i)" id="home">
-              <ion-card-header>
-                <ion-icon name="{{category.icon}}"></ion-icon>
-              </ion-card-header>
+    <!--categories-->
+  <ion-slides id="categories" pager="false" [options]="slideOpts">
+      <!--Today-->
+      <ion-slide>
+          <ion-card id="today">
+            <ion-card-header>
+              <ion-icon name="today"></ion-icon>
+            </ion-card-header>
 
-              <ion-card-content>
-                <ion-card-title>{{category.name}}</ion-card-title>
-                <ion-card-subtitle>5/10 completed</ion-card-subtitle>
-              </ion-card-content>
-            </ion-card>       
-        </ion-slide>     
-        </ion-slides>
+            <ion-card-content>
+              <ion-card-title>Today</ion-card-title>
+              <ion-card-subtitle>5/10 completed</ion-card-subtitle>
+            </ion-card-content>
+          </ion-card>               
+        </ion-slide>
+  
+        <!--categories-->
+      <ion-slide id="eachCategory" *ngFor="let category of categories; let i = index">      
+  
+        <ion-card (click)="chooseCategory(i); totalTasksComplete()" [ngClass]="{ 'focus': i == categoryIndex }">
+          <ion-card-header>
+            <ion-icon name="{{category.icon}}"></ion-icon>
+          </ion-card-header>
+  
+          <ion-card-content>
+            <ion-card-title>{{category.name}}</ion-card-title>
+            <ion-card-subtitle>{{currentTasks.length}}/10 completed</ion-card-subtitle>
+          </ion-card-content>
+        </ion-card>
+  
+    </ion-slide>  
+  </ion-slides>
 
-      </ion-card-content>
-    </ion-card>
-  </div>
 
   <!--Tasks-->
-  <div  id="taskList">
+  <div id="taskList">
     <ion-card>
       <ion-card-content>
         <ion-list>
           <ion-item-sliding *ngFor="let currentTask of currentTasks">         
-            <ion-item>
+            <ion-item lines="none" color="null">
               <ion-checkbox [(ngModel)]="currentTask.complete" (ionChange)="updateCheckbox(currentTask)"></ion-checkbox>
               <ion-label>{{currentTask.name}}</ion-label>
               <h4>{{currentTask.endDate | date:'dd MMM YYYY, HH:mm' }}</h4>
@@ -71,43 +77,66 @@
         <ion-grid>
           <ion-row>
             <ion-col>
+              <!--Streak-->
               <ion-row>
-                <ion-col>
-                  <h5>Streak</h5>
-                  <h2>10 Days</h2>
+                <ion-col size="5">
+                  <ion-icon name="calendar-outline"></ion-icon>
+                </ion-col>
+                <ion-col size="7">
+                  <ion-row>Streak</ion-row>
+                  <ion-row>10 Days</ion-row>
                 </ion-col>
               </ion-row>
-    
+
+              <!--Tasks-->
               <ion-row>
-                <ion-col>
-                  <h5>Tasks Done</h5>
-                  <h2>2 Tasks</h2>
+                <ion-col size="5">
+                  <ion-icon name="checkbox-outline"></ion-icon>
+                </ion-col>
+
+                <ion-col size="7">
+                  <ion-row>Done</ion-row>
+                  <ion-row>6</ion-row>
                 </ion-col>
               </ion-row>
             </ion-col>
 
+
+            <!--circle-->
             <ion-col>
-              circle
+                <svg
+                class="progress-ring"
+                width="120"
+                height="120">
+              <circle
+                class="progress-ring__circle"
+                stroke="white"
+                stroke-width="4"
+                fill="transparent"
+                r="52"
+                cx="60"
+                cy="60"/>
+            </svg>
             </ion-col>
           </ion-row>
 
           <ion-row>
             <ion-col>
-              <h5>Day</h5>
-              <ion-progress-bar value="0.5"></ion-progress-bar>
-              <h5>Day</h5>
+              <h5 style="font-size:17px">Day</h5>
+              <ion-progress-bar value="0.3"></ion-progress-bar>
+              <h5>2 Done</h5>
             </ion-col>
 
             <ion-col>
-              <h5>Day</h5>
+              <h5 style="font-size:17px">Week</h5>
               <ion-progress-bar value="0.5"></ion-progress-bar>
-              <h5>Day</h5>
+              <h5>4 Done</h5>
             </ion-col>
 
             <ion-col>
-              <h5>Day</h5>
-              <ion-progress-bar value="0.5"></ion-progress-bar>
-              <h5>Day</h5>
+              <h5 style="font-size:17px">Month</h5>
+              <ion-progress-bar value="0.7"></ion-progress-bar>
+              <h5>6 Done</h5>
             </ion-col>
 
           </ion-row>
@@ -119,5 +148,6 @@
 
     <div id=""></div>
   </div>
+
 </div>
 </ion-content>
