--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -1,75 +1,126 @@
-#weekButtons{
-    ion-card{
-        padding: 0;
-        margin: 0;
-        height: 50px;
-        text-align: center;
-                
-        ion-card-content{
-            padding: 0;
-        }
 
-            ion-card-title{
-                padding-top: .4rem;
-                font-size: 20px;
-            }
+ion-card-title { text-transform: capitalize; }
 
-            ion-card-subtitle{
-                font-size: 10px;
-            }
-        }
+ion-title{
+    height: 35px;
+    width: 100%;
+    padding: 28px 0 0 0;
+    margin: 0;
+    font-size: 22px;
+}
+
+
+ion-content{
+    --ion-background-color:#EEF2F5;
+}
+
+ion-card{
+    background-color: white;
+}
+
+.calendar{
+    margin-top: 58px;
 
 }
 
-#monthButtons{
+#gamificationBox{
+    margin-bottom: 18px;
+    margin-top: 18px;
+    ion-col{
+        color: black;
+        ion-icon{
+            color:#189BE6 ;
+            font-size: 45px;
+        }
+    }
+}
+
+.progress-ring__circle{
+    stroke: #189BE6;
+}
+
+#eachCategory {
     ion-card{
-        padding: 0;
-        margin: 0;
-        height: 50px;
-        text-align: center;
-        
-        
-        ion-card-content{
-            padding: 0;
+        ion-card-title{
+            font-size: 18px;
         }
 
+        ion-card-content{
             ion-card-title{
-                padding-top: .7rem;
-                font-size: 25px;
+                padding-top: 5px;
             }
 
             ion-card-subtitle{
-                font-size: 10px;
+                color: black;
             }
         }
-
+        
+        ion-icon{
+            padding: 1rem;
+            font-size: 2rem;
+            border-radius: 1.5rem;
+            color: #189BE6;
+            background-color: #EEF2F5;
+        }  
+        
+    }
 }
 
-#categories{
 
-    #home{
-        height: 10rem;
+#eachCategory :active {
+    background-color: #189BE6;
+
+    ion-icon{
+        padding: 1rem;
+        font-size: 2rem;
+        border-radius: 1.5rem;
+        color: #189BE6;
+        background-color: #EEF2F5;
     }
 
     ion-card-content{
-        padding:.1rem 0 .1rem 0;
+        ion-card-subtitle{
+            color: #EEF2F5;
+        }
     }
+}
 
-    ion-card{
-        margin:1rem 0 1rem 0;
-        height: 12rem;
-    }
-
-    
+#today{  
+    background-color: #189BE6;
     ion-card-title{
-        font-size: 1.2rem;
-    }  
+        font-size: 18px;
+    }
+
+    ion-card-content{
+        ion-card-title{
+            padding-top: 5px;
+        }
+        ion-card-subtitle{
+            color: #EEF2F5;
+        }
+    }
     
     ion-icon{
         padding: 1rem;
         font-size: 2rem;
-        background-color: red;
         border-radius: 1.5rem;
-    }    
-
+        color: #189BE6;
+        background-color: #EEF2F5;
+    }  
+    
+    
 }
+
+#taskList{
+    ion-card{
+        margin-top: 0;
+    }
+
+    ion-item-sliding{
+        ion-item{
+            background-color: white;
+            padding: 15px 0 15px 0;
+        }
+    }
+}
+
