--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,44 +1,19 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-
 <ion-content [fullscreen]="true">
-  <!--segment
-  <ion-segment [(ngModel)]="slideNumber">
-    <ion-segment-button value="0">
-      <ion-label>Category</ion-label>
-    </ion-segment-button>
-
-    <ion-segment-button value="1">
-      <ion-label>Task</ion-label>
-    </ion-segment-button>
-    
-    <ion-segment-button value="2">
-      <ion-label>Date & Time</ion-label>
-    </ion-segment-button>
-  </ion-segment>
-
-  <ion-grid class="ion-text-center">
-  </ion-grid>
-  <ion-progress-bar value="0.5"></ion-progress-bar>
-  -->
-
+ 
   <!--input area-->
   <ion-slides  #slides>
-    <!--Category-->
-    <ion-slide class="inputArea">    
-      <div>
-        <h2>Choose Category</h2>
 
+    <!--Category-->
+    <ion-slide >  
+      <ion-title>
+        Choose Category
+      </ion-title>
+
+      <div class="inputArea">
         <ion-radio-group value="#">
           <ion-grid>
-            <ion-row>
-              <ion-col size="6" *ngFor="let category of categories; let i = index">
+            <ion-row >
+              <ion-col id="eachCategory" size="6" *ngFor="let category of categories; let i = index">
                 <ion-card value="home" id="home" (click)="chooseCategory(i)">
                   <ion-card-header>
                     <ion-icon name="{{category.icon}}"></ion-icon>
@@ -54,11 +29,23 @@
         </ion-radio-group>
       </div>
     </ion-slide>
-
+    
     <!--list details-->    
     <ion-slide>
-      <div class="inputArea">
-        <h2>Enter Task Detials</h2>
+      <div id="taskInputArea">
+      
+      <ion-toolbar>
+        <ion-title>
+          Profile
+        </ion-title>
+        
+        <!--popover menu-->
+        <ion-buttons slot="start" (click)="changeSlide()">
+          <ion-button>
+            <ion-icon name="chevron-back-outline"></ion-icon>
+          </ion-button>
+        </ion-buttons>
+      </ion-toolbar>
 
         <ion-item id="listName">
           <ion-label position="floating">Enter Task Name</ion-label>
@@ -95,7 +82,7 @@
 
           
         <section class="full-width">
-          <ion-button (click)="changeSlide()" expand="full" color="secondary">Back</ion-button>
+          
           <ion-button (click)="save()" expand="full" color="secondary">Save</ion-button>
         </section>
 
