--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -1,3 +1,11 @@
+ion-title{
+    height: 35px;
+    width: 100%;
+    padding: 28px 0 0 0;
+    margin: 0;
+    font-size: 22px;
+}
+
 #listName{
     padding-bottom: 1rem;
 }
@@ -12,6 +20,7 @@ ion-button {
 }
 
 .inputArea{
+    margin-top: 58px;
     width: 100%;
 
     ion-label{
@@ -19,7 +28,65 @@ ion-button {
     }
 }
 
+#taskInputArea{
+    margin-top: 0px;
+    width: 100%;
+
+    ion-label{
+        padding-top: .3rem;
+    }
+
+    ion-button{
+        margin-top: 12px;
+    }
+}
+
 ion-slides{
     min-height: 100%;
 }
 
+#eachCategory {
+    ion-card{
+        margin: 6px;
+        ion-card-title{
+            font-size: 18px;
+        }
+
+        ion-card-content{
+            ion-card-title{
+                padding-top: 5px;
+            }
+
+            ion-card-subtitle{
+                color: black;
+            }
+        }
+        
+        ion-icon{
+            padding: 1rem;
+            font-size: 2rem;
+            border-radius: 1.5rem;
+            color: #189BE6;
+            background-color: #EEF2F5;
+        }  
+        
+    }
+}
+
+#eachCategory :active {
+    background-color: #189BE6;
+
+    ion-icon{
+        padding: 1rem;
+        font-size: 2rem;
+        border-radius: 1.5rem;
+        color: #189BE6;
+        background-color: #EEF2F5;
+    }
+
+    ion-card-content{
+        ion-card-subtitle{
+            color: #EEF2F5;
+        }
+    }
+}
