--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -26,12 +26,18 @@ ion-card{
 .calendar{  
     
     [_nghost-vgs-c134] .week-title[_ngcontent-vgs-c134] {
-        padding: 10px 0 10px 0 !important;
+        padding: 10px 0 0px 0 !important;
     }
     
     ion-calendar{
-        padding: 10px 0 10px 0;
+        padding: 10px 0 0px 0;
     }
+}
+
+#categories{
+    ion-card{
+        margin-top: 0px !important;
+    }        
 }
 
 #gamificationBox{
@@ -52,8 +58,6 @@ ion-card{
 
 #eachCategory {
     ion-card{
-        margin-top: 0px;
-
         ion-card-title{
             font-size: 18px;
         }
@@ -79,8 +83,7 @@ ion-card{
     }
 }
 
-
-#eachCategory :active {
+#eachCategory .focus {
     background-color: #189BE6;
 
     ion-icon{
@@ -99,8 +102,7 @@ ion-card{
 }
 
 #today{  
-    margin-top: 0px;
-    background-color: #189BE6;
+
     ion-card-title{
         font-size: 18px;
     }
@@ -110,7 +112,7 @@ ion-card{
             padding-top: 5px;
         }
         ion-card-subtitle{
-            color: #EEF2F5;
+            color: black;
         }
     }
     
@@ -120,10 +122,21 @@ ion-card{
         border-radius: 1.5rem;
         color: #189BE6;
         background-color: #EEF2F5;
-    }  
+    }     
     
-    
+    &.focus {
+        color: #EEF2F5;
+        background-color: #189BE6;
+
+        ion-card-content{
+            ion-card-subtitle{
+                color: #EEF2F5;
+            }
+        }
+    }
 }
+
+
 
 #taskList{
     ion-card{
