--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -2,7 +2,7 @@
 <ion-content [fullscreen]="true">
 
   <ion-title>
-    Welcome Redd
+    Welcome Sean
   </ion-title>
 
   <!--Gamification-->
@@ -110,7 +110,7 @@
 
         <ion-card-content>
           <ion-card-title>{{category.name}}</ion-card-title>
-          <ion-card-subtitle>{{currentTasks.length}}/10 completed</ion-card-subtitle>
+          <ion-card-subtitle>0 /{{currentTasks.length}} completed</ion-card-subtitle>
         </ion-card-content>
       </ion-card>
 
