--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -12,27 +12,27 @@
 
       <ion-item lines="none" *ngFor="let number of [0,1,2,3,4]">
         <ion-avatar slot="start">
-          <img src="/assets/images/profile.jpg">
+          <img src="/assets/images/profile1.jpg">
         </ion-avatar>
-        <ion-label >
-          <h2>Twanny Tad doughnuts</h2>
-          <p>HAWN TAD DOUGHNUTS, SĦAN U TAJBIN !!!</p>
+        <ion-label>
+          <h2>John</h2>
+          <p>Hey man ! Having you completed the assignment that was due for today ? </p>
         </ion-label>
       </ion-item>
     </ion-list>
 
     <ion-list>
       <ion-list-header>
-        Recent Conversations
+        More Conversations
       </ion-list-header>
 
       <ion-item lines="none" *ngFor="let number of [0,1,2,3,4]">
         <ion-avatar slot="start">
-          <img src="/assets/images/profile2.png">
+          <img src="/assets/images/profile2.jpg">
         </ion-avatar>
         <ion-label >
-          <h2>Guzi Tal Hobz</h2>
-          <p>taaaaAAAaaaaAAaaalL ĦooOBbŻŻŻ !!!</p>
+          <h2>Deborah</h2>
+          <p>Just a reminder that we have a meeting in about 30 minutes time !</p>
         </ion-label>
       </ion-item>
     </ion-list>
