--- a/src/app/tab5/tab5.page.html
+++ b/src/app/tab5/tab5.page.html
@@ -18,10 +18,10 @@
   <!--user info-->
   <div class="userInfo" align="center">
     <ion-avatar>
-      <img src="/assets/images/profile.jpg">
+      <img src="/assets/images/profile3.jpg">
     </ion-avatar>
 
-    <h3>Twanny Tad doughnuts</h3>
+    <h3>Sean</h3>
     <h5>10/20 Tasks Completed Today</h5>
   </div>
 
