--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -16,7 +16,7 @@
         </ion-avatar>
         <ion-label>
           <h2>John</h2>
-          <p>Hey man ! Having you completed the assignment that was due for today ? </p>
+          <p>Hey man ! Have you completed the assignment that was due for today ? </p>
         </ion-label>
       </ion-item>
     </ion-list>
